@@ -1,5 +1,7 @@
 --------------------------
 Changes in 1.8.6
+- CObjMeshFileLoader: Backport fixes from trunk to avoid unnecessary memory allocations (speedup)
+- CObjMeshFileLoader: Backport fixes from trunk to avoid some buffer overruns
 - CImageLoaderBMP: Fix handling 4 bit RLE encoding. Thanks @sfan5 finding first bug and reporting (turned out there were quite a few more, this never worked much)
 - CImageLoaderBMP: add bound checks to RLE decompression. Thanks @sfan5 for report and patch
   Patch (commit 4506d23 to Minetest): https://github.com/minetest/irrlicht/commit/4506d23dc3fa48332b5ca6c05633aebdbac673be
